feat: add missing status to event participant
